syntax = "proto3";
package broadcast.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/broadcast/types";

import "gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message MsgRegisterProxy {
  bytes principal_addr = 1
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  bytes proxy_addr = 2 [ (gogoproto.casttype) =
                             "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}
